# NA62Analysis

./: .cproject  .project  CMakeLists.txt  HISTORY  HOWTO_OLD_NEW.txt  Makefile  NA62Analysis.cmake  NA62AnalysisBuilder.py  README  README.md  common.cmake  dependencyGraph.py  doxyfile
Analyzers/: CMakeLists.txt
Analyzers/CalibrationTools/include/: CHANTIT0.hh  CHANTIT0Computation.hh  CHODT0.hh  CHODT0Computation.hh  CedarT0.hh  CedarT0Computation.hh  HACT0.hh  HACT0Computation.hh  IRCT0.hh  IRCT0Computation.hh  LAVT0.hh  LAVT0Computation.hh  MUV0T0.hh  MUV0T0Computation.hh  MUV1T0.hh  MUV1T0Computation.hh  MUV2T0.hh  MUV2T0Computation.hh  MUV3T0.hh  MUV3T0Computation.hh  MUV3TilesT0.hh  MUV3TilesT0Computation.hh  NewCHODT0.hh  RICHT0.hh  RICHT0Computation.hh  SACT0.hh  SACT0Computation.hh  SpectrometerT0.hh  StrawAddress.hh  StrawPlace.hh
Analyzers/CalibrationTools/src/: CHANTIT0.cc  CHANTIT0Computation.cc  CHODT0.cc  CHODT0Computation.cc  CedarT0.cc  CedarT0Computation.cc  HACT0.cc  HACT0Computation.cc  IRCT0.cc  IRCT0Computation.cc  LAVT0.cc  LAVT0Computation.cc  MUV0T0.cc  MUV0T0Computation.cc  MUV1T0.cc  MUV1T0Computation.cc  MUV2T0.cc  MUV2T0Computation.cc  MUV3T0.cc  MUV3T0Computation.cc  MUV3TilesT0.cc  MUV3TilesT0Computation.cc  NewCHODT0.cc  RICHT0.cc  RICHT0Computation.cc  SACT0.cc  SACT0Computation.cc  SpectrometerT0.cc  StrawAddress.cc  StrawPlace.cc
Analyzers/MonitoringTools/include/: MUV3DataQualityMonitor.hh  SpecRICHEventMonitor.hh
Analyzers/MonitoringTools/src/: MUV3DataQualityMonitor.cc  SpecRICHEventMonitor.cc
Analyzers/Physics/: CMakeLists.txt
Analyzers/PhysicsTools/: CMakeLists.txt
Analyzers/PhysicsTools/include/: SpecLKrParticleID.hh  SpecMUV3Association.hh  SpecMUV3ParticleID.hh  SpecRICHParticleID.hh  SpectrometerVertexBuilder.hh  VertexCDA.hh
Analyzers/PhysicsTools/src/: SpecLKrParticleID.cc  SpecMUV3Association.cc  SpecMUV3ParticleID.cc  SpecRICHParticleID.cc  SpectrometerVertexBuilder.cc  VertexCDA.cc
Analyzers/TestTools/include/: CedarMCTester.hh  MUV3MCTester.hh
Analyzers/TestTools/src/: CedarMCTester.cc  MUV3MCTester.cc
Analyzers/include/: Test.hh  VertexCDA.hh
Analyzers/src/: Test.cc  VertexCDA.cc
Examples/: CMakeLists.txt  exampleExportTreesConfig  examplePi0Config  exampleSkimmingConfig
Examples/TRecoLKrCandidateMC/: CMakeLists.txt  LinkDef.h  TRecoLKrCandidateMC.cc  TRecoLKrCandidateMC.hh
Examples/include/: LKrPhotonMC.hh  Pi0Reconstruction.hh  SkimmingNoStrawMuonsTracks.hh
Examples/src/: LKrPhotonMC.cc  Pi0Reconstruction.cc  SkimmingNoStrawMuonsTracks.cc  VertexCDA.cc
PhysicsLib/: CMakeLists.txt
PhysicsLib/include/: NA62Constants.hh  TwoLinesCDA.hh  functions.hh
PhysicsLib/src/: functions.cc
PhysicsObjects/: CMakeLists.txt
PhysicsObjects/include/: LinkDef.h
Templates/: CMakeLists.txt  CMakeLists_PO.txt  Makefile  analyzers.cmake  env.csh  env.sh  main.cc  settingsna62  templateAnalyzer.cc  templateAnalyzer.hh
ToolsLib/: CMakeLists.txt
ToolsLib/include/: BlueTubeTracker.hh  MultipleLinesCDA.hh  NA62Constants.hh  SpecLKrAssociation.hh  SpecMUV3Association.hh  SpecMUV3AssociationRecord.hh  SpecMUV3Muon.hh  SpecRICHAssociation.hh  SpectrometerTrackVertex.hh  StrawAddress.hh  StrawPlace.hh  T0Computation.hh  T0Evaluation.hh  TwoLinesCDA.hh  VertexLSF.hh  functions.hh
ToolsLib/src/: BlueTubeTracker.cc  MultipleLinesCDA.cc  SpecLKrAssociation.cc  SpecMUV3Association.cc  SpecMUV3AssociationRecord.cc  SpecMUV3Muon.cc  SpecRICHAssociation.cc  SpectrometerTrackVertex.cc  T0Computation.cc  T0Evaluation.cc  TwoLinesCDA.cc  VertexLSF.cc  functions.cc
doc/: CreateOM.dox  GitHowTo.dox  MCRevisions.dox  NA62Analysis.dox  componentStatus.dox  toolsStatus.dox
include/: Analyzer.hh  AnalyzerParam.hh  BaseAnalysis.hh  CanvasOrganizer.hh  ConfigAnalyzer.hh  ConfigParser.hh  ConfigSettings.hh  CounterHandler.hh  DetectorAcceptance.hh  EventFraction.hh  EventFractionHandler.hh  FWEnums.hh  HistoHandler.hh  HistoHandling.hh  IOHandler.hh  IOHisto.hh  IOPrimitive.hh  IOTree.hh  LinkDef.h  MCSimple.hh  NA62Constants.hh  NeuralNetwork.hh  OMAnalyzerWindow.hh  OMMainWindow.hh  ParticleInterface.hh  ParticleTree.hh  Persistency.hh  PrimitiveReader.hh  SettingsReader.hh  StringBalancedTable.hh  StringTable.hh  TermManip.hh  TimeCounter.h  UserMethods.hh  Verbose.hh  containers.hh  functions.hh
scripts/: FindROOT.cmake  FindROOT.cmake.new  NA62Analysis.cmake  NA62AnalysisBuilder.py  common.cmake  env.csh  env.sh  test_unordered_map.cpp
src/: Analyzer.cc  AnalyzerParam.cc  BaseAnalysis.cc  CanvasOrganizer.cc  ConfigAnalyzer.cc  ConfigParser.cc  ConfigSettings.cc  CounterHandler.cc  DetectorAcceptance.cc  EventFraction.cc  EventFractionHandler.cc  HistoHandler.cc  HistoHandlerIterator.cc  HistoHandling.cc  IOHandler.cc  IOHisto.cc  IOPrimitive.cc  IOTree.cc  MCSimple.cc  NeuralNetwork.cc  OMAnalyzerWindow.cc  OMMainWindow.cc  ParticleInterface.cc  ParticleTree.cc  PrimitiveReader.cc  SettingsReader.cc  StringBalancedTable.cc  StringTable.cc  TermManip.cc  TimeCounter.cc  UserMethods.cc  Verbose.cc  functions.cc
